--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2NCLB4HDF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q2NCLB4HDF');
+</script>
+
+
 <meta charset="utf-8">
-<title>test</title>
+<title>hello，world</title>
 </head>
 <body>
-  test
-</body>
+  hello，world
+<a href="index1.html">test1</a>
+<a href="index2.html">test2</a>
+  </body>
 </html>
